2.1.0/_sources/gallery/lines_bars_and_markers/fill_betweenx_demo.rst.txt


.. _sphx_glr_gallery_lines_bars_and_markers_fill_betweenx_demo.py:


==================
Fill Betweenx Demo
==================

Using ``fill_betweenx`` to color between two horizontal curves.




.. rst-class:: sphx-glr-horizontal


    *

      .. image:: /gallery/lines_bars_and_markers/images/sphx_glr_fill_betweenx_demo_001.png
            :scale: 47

    *

      .. image:: /gallery/lines_bars_and_markers/images/sphx_glr_fill_betweenx_demo_002.png
            :scale: 47





.. code-block:: python

    import matplotlib.pyplot as plt
    import numpy as np


    y = np.arange(0.0, 2, 0.01)
    x1 = np.sin(2 * np.pi * y)
    x2 = 1.2 * np.sin(4 * np.pi * y)

    fig, [ax1, ax2, ax3] = plt.subplots(3, 1, sharex=True)

    ax1.fill_betweenx(y, 0, x1)
    ax1.set_ylabel('(x1, 0)')

    ax2.fill_betweenx(y, x1, 1)
    ax2.set_ylabel('(x1, 1)')

    ax3.fill_betweenx(y, x1, x2)
    ax3.set_ylabel('(x1, x2)')
    ax3.set_xlabel('x')

    # now fill between x1 and x2 where a logical condition is met.  Note
    # this is different than calling
    #   fill_between(y[where], x1[where], x2[where])
    # because of edge effects over multiple contiguous regions.

    fig, [ax, ax1] = plt.subplots(2, 1, sharex=True)
    ax.plot(x1, y, x2, y, color='black')
    ax.fill_betweenx(y, x1, x2, where=x2 >= x1, facecolor='green')
    ax.fill_betweenx(y, x1, x2, where=x2 <= x1, facecolor='red')
    ax.set_title('fill between where')

    # Test support for masked arrays.
    x2 = np.ma.masked_greater(x2, 1.0)
    ax1.plot(x1, y, x2, y, color='black')
    ax1.fill_betweenx(y, x1, x2, where=x2 >= x1, facecolor='green')
    ax1.fill_betweenx(y, x1, x2, where=x2 <= x1, facecolor='red')
    ax1.set_title('Now regions with x2 > 1 are masked')

    # This example illustrates a problem; because of the data
    # gridding, there are undesired unfilled triangles at the crossover
    # points.  A brute-force solution would be to interpolate all
    # arrays to a very fine grid before plotting.

    plt.show()

**Total running time of the script:** ( 0 minutes  0.091 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: fill_betweenx_demo.py <fill_betweenx_demo.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: fill_betweenx_demo.ipynb <fill_betweenx_demo.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
